python_x86_information/intel_operation_languageParser.py
# Generated from intel_operation_language.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class intel_operation_languageParser ( Parser ):

    grammarFileName = "intel_operation_language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "')'", "'?'", "':'", 
                     "','", "'.'", "':='", "'='", "'=='", "'+'", "'++'", 
                     "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", 
                     "'||'", "'^'", "'XOR'", "'AND'", "'!'", "'~'", "'<'", 
                     "'<='", "'>'", "'>='", "'<<'", "'>>'", "'IF'", "'FI'", 
                     "'ELSE'", "'FOR'", "'to'", "'TO'", "'ENDFOR'", "'DO'", 
                     "'WHILE'", "'OD'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "LeftParen", 
                      "RightParen", "Question", "Colon", "Comma", "Dot", 
                      "Assign", "Equal", "EqualEqual", "Plus", "PlusPlus", 
                      "Minus", "MinusMinus", "Star", "Div", "Mod", "And", 
                      "Or", "AndAnd", "OrOr", "Caret", "XOR", "AND", "Not", 
                      "Tilde", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "LeftShift", "RightShift", "IF", "FI", "ELSE", "FOR", 
                      "TO", "TO2", "ENDFOR", "DO", "WHILE", "OD", "NAME", 
                      "INT", "LineComment", "WS" ]

    RULE_prog = 0
    RULE_expression = 1
    RULE_definition = 2
    RULE_ternaryoperator = 3
    RULE_ifExpression = 4
    RULE_forExpression = 5
    RULE_forExpressionExpression = 6
    RULE_doWhileExpression = 7
    RULE_doWhileExpressionExpression = 8
    RULE_functionExpression = 9
    RULE_functionExpressionArgument = 10
    RULE_structAccess = 11
    RULE_comparison = 12
    RULE_variable = 13
    RULE_accessoperator = 14
    RULE_accessoperatorname = 15
    RULE_operator = 16

    ruleNames =  [ "prog", "expression", "definition", "ternaryoperator", 
                   "ifExpression", "forExpression", "forExpressionExpression", 
                   "doWhileExpression", "doWhileExpressionExpression", "functionExpression", 
                   "functionExpressionArgument", "structAccess", "comparison", 
                   "variable", "accessoperator", "accessoperatorname", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    LeftParen=3
    RightParen=4
    Question=5
    Colon=6
    Comma=7
    Dot=8
    Assign=9
    Equal=10
    EqualEqual=11
    Plus=12
    PlusPlus=13
    Minus=14
    MinusMinus=15
    Star=16
    Div=17
    Mod=18
    And=19
    Or=20
    AndAnd=21
    OrOr=22
    Caret=23
    XOR=24
    AND=25
    Not=26
    Tilde=27
    Less=28
    LessEqual=29
    Greater=30
    GreaterEqual=31
    LeftShift=32
    RightShift=33
    IF=34
    FI=35
    ELSE=36
    FOR=37
    TO=38
    TO2=39
    ENDFOR=40
    DO=41
    WHILE=42
    OD=43
    NAME=44
    INT=45
    LineComment=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(intel_operation_languageParser.EOF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = intel_operation_languageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << intel_operation_languageParser.LeftParen) | (1 << intel_operation_languageParser.Assign) | (1 << intel_operation_languageParser.Equal) | (1 << intel_operation_languageParser.EqualEqual) | (1 << intel_operation_languageParser.Plus) | (1 << intel_operation_languageParser.Minus) | (1 << intel_operation_languageParser.Star) | (1 << intel_operation_languageParser.Div) | (1 << intel_operation_languageParser.Mod) | (1 << intel_operation_languageParser.And) | (1 << intel_operation_languageParser.Or) | (1 << intel_operation_languageParser.AndAnd) | (1 << intel_operation_languageParser.XOR) | (1 << intel_operation_languageParser.AND) | (1 << intel_operation_languageParser.Not) | (1 << intel_operation_languageParser.Less) | (1 << intel_operation_languageParser.Greater) | (1 << intel_operation_languageParser.IF) | (1 << intel_operation_languageParser.FOR) | (1 << intel_operation_languageParser.DO) | (1 << intel_operation_languageParser.NAME) | (1 << intel_operation_languageParser.INT))) != 0):
                self.state = 34
                self.expression()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(intel_operation_languageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(intel_operation_languageParser.INT, 0)

        def ifExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.IfExpressionContext,0)


        def forExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ForExpressionContext,0)


        def doWhileExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.DoWhileExpressionContext,0)


        def functionExpression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.FunctionExpressionContext,0)


        def ternaryoperator(self):
            return self.getTypedRuleContext(intel_operation_languageParser.TernaryoperatorContext,0)


        def variable(self):
            return self.getTypedRuleContext(intel_operation_languageParser.VariableContext,0)


        def operator(self):
            return self.getTypedRuleContext(intel_operation_languageParser.OperatorContext,0)


        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = intel_operation_languageParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(intel_operation_languageParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.ifExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.forExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.doWhileExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.functionExpression()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.ternaryoperator()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.variable()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.operator()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 50
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 51
                    self.expression()
                    self.state = 54 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << intel_operation_languageParser.LeftParen) | (1 << intel_operation_languageParser.Assign) | (1 << intel_operation_languageParser.Equal) | (1 << intel_operation_languageParser.EqualEqual) | (1 << intel_operation_languageParser.Plus) | (1 << intel_operation_languageParser.Minus) | (1 << intel_operation_languageParser.Star) | (1 << intel_operation_languageParser.Div) | (1 << intel_operation_languageParser.Mod) | (1 << intel_operation_languageParser.And) | (1 << intel_operation_languageParser.Or) | (1 << intel_operation_languageParser.AndAnd) | (1 << intel_operation_languageParser.XOR) | (1 << intel_operation_languageParser.AND) | (1 << intel_operation_languageParser.Not) | (1 << intel_operation_languageParser.Less) | (1 << intel_operation_languageParser.Greater) | (1 << intel_operation_languageParser.IF) | (1 << intel_operation_languageParser.FOR) | (1 << intel_operation_languageParser.DO) | (1 << intel_operation_languageParser.NAME) | (1 << intel_operation_languageParser.INT))) != 0)):
                        break

                self.state = 56
                self.match(intel_operation_languageParser.RightParen)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(intel_operation_languageParser.OperatorContext,0)


        def INT(self):
            return self.getToken(intel_operation_languageParser.INT, 0)

        def variable(self):
            return self.getTypedRuleContext(intel_operation_languageParser.VariableContext,0)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = intel_operation_languageParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definition)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [intel_operation_languageParser.Assign, intel_operation_languageParser.Equal, intel_operation_languageParser.EqualEqual, intel_operation_languageParser.Plus, intel_operation_languageParser.Minus, intel_operation_languageParser.Star, intel_operation_languageParser.Div, intel_operation_languageParser.Mod, intel_operation_languageParser.And, intel_operation_languageParser.Or, intel_operation_languageParser.AndAnd, intel_operation_languageParser.XOR, intel_operation_languageParser.AND, intel_operation_languageParser.Not, intel_operation_languageParser.Less, intel_operation_languageParser.Greater]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.operator()
                pass
            elif token in [intel_operation_languageParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(intel_operation_languageParser.INT)
                pass
            elif token in [intel_operation_languageParser.NAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TernaryoperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def comparison(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ComparisonContext,0)


        def Question(self):
            return self.getToken(intel_operation_languageParser.Question, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def Colon(self):
            return self.getToken(intel_operation_languageParser.Colon, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_ternaryoperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTernaryoperator" ):
                listener.enterTernaryoperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTernaryoperator" ):
                listener.exitTernaryoperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTernaryoperator" ):
                return visitor.visitTernaryoperator(self)
            else:
                return visitor.visitChildren(self)




    def ternaryoperator(self):

        localctx = intel_operation_languageParser.TernaryoperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ternaryoperator)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 66
                self.comparison()
                self.state = 67
                self.match(intel_operation_languageParser.Question)
                self.state = 68
                self.expression()
                self.state = 69
                self.match(intel_operation_languageParser.Colon)
                self.state = 70
                self.expression()
                self.state = 71
                self.match(intel_operation_languageParser.RightParen)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(intel_operation_languageParser.LeftParen)
                self.state = 74
                self.comparison()
                self.state = 75
                self.match(intel_operation_languageParser.RightParen)
                self.state = 76
                self.match(intel_operation_languageParser.Question)
                self.state = 77
                self.expression()
                self.state = 78
                self.match(intel_operation_languageParser.Colon)
                self.state = 79
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.comparison()
                self.state = 82
                self.match(intel_operation_languageParser.Question)
                self.state = 83
                self.expression()
                self.state = 84
                self.match(intel_operation_languageParser.Colon)
                self.state = 85
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(intel_operation_languageParser.IF, 0)

        def comparison(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ComparisonContext,0)


        def FI(self):
            return self.getToken(intel_operation_languageParser.FI, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def ELSE(self):
            return self.getToken(intel_operation_languageParser.ELSE, 0)

        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_ifExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpression" ):
                listener.enterIfExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpression" ):
                listener.exitIfExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpression" ):
                return visitor.visitIfExpression(self)
            else:
                return visitor.visitChildren(self)




    def ifExpression(self):

        localctx = intel_operation_languageParser.IfExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(intel_operation_languageParser.IF)
            self.state = 90
            self.comparison()
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.expression()
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << intel_operation_languageParser.LeftParen) | (1 << intel_operation_languageParser.Assign) | (1 << intel_operation_languageParser.Equal) | (1 << intel_operation_languageParser.EqualEqual) | (1 << intel_operation_languageParser.Plus) | (1 << intel_operation_languageParser.Minus) | (1 << intel_operation_languageParser.Star) | (1 << intel_operation_languageParser.Div) | (1 << intel_operation_languageParser.Mod) | (1 << intel_operation_languageParser.And) | (1 << intel_operation_languageParser.Or) | (1 << intel_operation_languageParser.AndAnd) | (1 << intel_operation_languageParser.XOR) | (1 << intel_operation_languageParser.AND) | (1 << intel_operation_languageParser.Not) | (1 << intel_operation_languageParser.Less) | (1 << intel_operation_languageParser.Greater) | (1 << intel_operation_languageParser.IF) | (1 << intel_operation_languageParser.FOR) | (1 << intel_operation_languageParser.DO) | (1 << intel_operation_languageParser.NAME) | (1 << intel_operation_languageParser.INT))) != 0)):
                    break

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==intel_operation_languageParser.ELSE:
                self.state = 96
                self.match(intel_operation_languageParser.ELSE)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 97
                    self.expression()
                    self.state = 100 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << intel_operation_languageParser.LeftParen) | (1 << intel_operation_languageParser.Assign) | (1 << intel_operation_languageParser.Equal) | (1 << intel_operation_languageParser.EqualEqual) | (1 << intel_operation_languageParser.Plus) | (1 << intel_operation_languageParser.Minus) | (1 << intel_operation_languageParser.Star) | (1 << intel_operation_languageParser.Div) | (1 << intel_operation_languageParser.Mod) | (1 << intel_operation_languageParser.And) | (1 << intel_operation_languageParser.Or) | (1 << intel_operation_languageParser.AndAnd) | (1 << intel_operation_languageParser.XOR) | (1 << intel_operation_languageParser.AND) | (1 << intel_operation_languageParser.Not) | (1 << intel_operation_languageParser.Less) | (1 << intel_operation_languageParser.Greater) | (1 << intel_operation_languageParser.IF) | (1 << intel_operation_languageParser.FOR) | (1 << intel_operation_languageParser.DO) | (1 << intel_operation_languageParser.NAME) | (1 << intel_operation_languageParser.INT))) != 0)):
                        break



            self.state = 104
            self.match(intel_operation_languageParser.FI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(intel_operation_languageParser.FOR, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.VariableContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.VariableContext,i)


        def Assign(self):
            return self.getToken(intel_operation_languageParser.Assign, 0)

        def expression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,0)


        def ENDFOR(self):
            return self.getToken(intel_operation_languageParser.ENDFOR, 0)

        def TO(self):
            return self.getToken(intel_operation_languageParser.TO, 0)

        def TO2(self):
            return self.getToken(intel_operation_languageParser.TO2, 0)

        def INT(self):
            return self.getToken(intel_operation_languageParser.INT, 0)

        def forExpressionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ForExpressionExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ForExpressionExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_forExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForExpression" ):
                listener.enterForExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForExpression" ):
                listener.exitForExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForExpression" ):
                return visitor.visitForExpression(self)
            else:
                return visitor.visitChildren(self)




    def forExpression(self):

        localctx = intel_operation_languageParser.ForExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(intel_operation_languageParser.FOR)
            self.state = 107
            self.variable()
            self.state = 108
            self.match(intel_operation_languageParser.Assign)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [intel_operation_languageParser.NAME]:
                self.state = 109
                self.variable()
                pass
            elif token in [intel_operation_languageParser.INT]:
                self.state = 110
                self.match(intel_operation_languageParser.INT)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            _la = self._input.LA(1)
            if not(_la==intel_operation_languageParser.TO or _la==intel_operation_languageParser.TO2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 114
            self.expression()
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.forExpressionExpression()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << intel_operation_languageParser.LeftParen) | (1 << intel_operation_languageParser.Assign) | (1 << intel_operation_languageParser.Equal) | (1 << intel_operation_languageParser.EqualEqual) | (1 << intel_operation_languageParser.Plus) | (1 << intel_operation_languageParser.Minus) | (1 << intel_operation_languageParser.Star) | (1 << intel_operation_languageParser.Div) | (1 << intel_operation_languageParser.Mod) | (1 << intel_operation_languageParser.And) | (1 << intel_operation_languageParser.Or) | (1 << intel_operation_languageParser.AndAnd) | (1 << intel_operation_languageParser.XOR) | (1 << intel_operation_languageParser.AND) | (1 << intel_operation_languageParser.Not) | (1 << intel_operation_languageParser.Less) | (1 << intel_operation_languageParser.Greater) | (1 << intel_operation_languageParser.IF) | (1 << intel_operation_languageParser.FOR) | (1 << intel_operation_languageParser.DO) | (1 << intel_operation_languageParser.NAME) | (1 << intel_operation_languageParser.INT))) != 0)):
                    break

            self.state = 120
            self.match(intel_operation_languageParser.ENDFOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForExpressionExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_forExpressionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForExpressionExpression" ):
                listener.enterForExpressionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForExpressionExpression" ):
                listener.exitForExpressionExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForExpressionExpression" ):
                return visitor.visitForExpressionExpression(self)
            else:
                return visitor.visitChildren(self)




    def forExpressionExpression(self):

        localctx = intel_operation_languageParser.ForExpressionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forExpressionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(intel_operation_languageParser.DO, 0)

        def WHILE(self):
            return self.getToken(intel_operation_languageParser.WHILE, 0)

        def LeftParen(self):
            return self.getToken(intel_operation_languageParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(intel_operation_languageParser.RightParen, 0)

        def OD(self):
            return self.getToken(intel_operation_languageParser.OD, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.ExpressionContext,i)


        def doWhileExpressionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(intel_operation_languageParser.DoWhileExpressionExpressionContext)
            else:
                return self.getTypedRuleContext(intel_operation_languageParser.DoWhileExpressionExpressionContext,i)


        def getRuleIndex(self):
            return intel_operation_languageParser.RULE_doWhileExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileExpression" ):
                listener.enterDoWhileExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileExpression" ):
                listener.exitDoWhileExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileExpression" ):
                return visitor.visitDoWhileExpression(self)
            else:
                return visitor.visitChildren(self)




    def doWhileExpression(self):
